--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
 
         <div class="image-section">
-            <img src="img/IMG_3916.PNG" alt="Свадебная картинка" class="wedding-image">
+            <img src="img/IMG_3916-min.PNG" alt="Свадебная картинка" class="wedding-image">
         </div>
 
         <!-- Форма RSVP -->
