--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
 
 
-    <!-- <audio id="backgroundMusic" loop autoplay>
+     <audio id="backgroundMusic" loop autoplay>
         <source src="sound/313b9231e4ae916.mp3" type="audio/mp3">
         Ваш браузер не поддерживает аудио.
-    </audio> -->
+    </audio> 
 
     <div class="container">
         <div class="header">
